# POO

./: Buffer.cpp  Buffer.h  CMakeLists.txt  Caravana.cpp  Caravana.h  Comando.cpp  Comando.h  Elemento.cpp  Elemento.h  GestorComandos.cpp  GestorComandos.h  Item.cpp  Item.h  Mapa.cpp  Mapa.h  Pixel.cpp  Pixel.h  README.md  Simulador.cpp  Simulador.h  comandos_simulador.txt  main.cpp
